# google-calendar-sync

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  events.csv  events.json  main.py  pyproject.toml  pytest.ini  run.sh
src/: dto.py  main.py
src/sources/: csv_reader.py  json_reader.py
src/targets/: google_calendar.py  ics_writer.py
tests/: test_csv_reader.py  test_event_dto.py  test_google_calendar.py  test_ics_writer.py  test_json_reader.py
