[project]
name = "google-calendar-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Valido",email = "leandrovalido@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
